--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ footer {
 }
 
 .fa-globe, .fa-facebook, .fa-twitter, .fa-instagram, .fa-youtube {
-	font-size: 25;
+	font-size: 25px;
 	color: white;
 	margin: 0 10px 0 10px;
 }
